--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -697,7 +697,7 @@
                                 <div style="margin-bottom:5px; padding:5px" class="border border-top-0">
                                     <h3>Best Products in Amazon:</h3>
                                 </div>
-                                <div style="padding:10px;" class="border-gradient-rounded product">
+                                <div style="padding:10px;" class="border-gradient-rounded">
                                     <div class="row">
                                         <div class="col-12" style="margin-top: 10px">
                                             <div><i class="fa-brands fa-amazon fa-2xl"></i></div>
@@ -706,39 +706,39 @@
                                     <div class="row" style="margin-top: 10px">
                                         <h3 class="col-12">
                                             <hr/>
-                                            <div>
+                                            <div class="product">
                                                 <a href="https://amzn.to/4qpX7aS" target="_blank" class="btn btn-link amazon-list"><strong>Deals in Amazon.</strong></a>
                                             </div>
                                             <hr/>
-                                            <div>
+                                            <div class="product">
                                                 <a href="https://amzn.to/4bCo9Z0" target="_blank" class="btn btn-link amazon-list"><strong>Eletronic Deals in Amazon.</strong></a>
                                             </div>
                                             <hr/>
-                                            <div>
+                                            <div class="product">
                                                 <a href="https://amzn.to/4akiO66" target="_blank" class="btn btn-link amazon-list"><strong>Cellphones and Accessories Deals in Amazon.</strong></a>
                                             </div>
                                             <hr/>
-                                            <div>
+                                            <div class="product">
                                                 <a href="https://amzn.to/4alHefE" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers in Amazon.</strong></a>
                                             </div>
                                             <hr/>
-                                            <div>
+                                            <div class="product">
                                                 <a href="https://amzn.to/4tk3Shj" target="_blank" class="btn btn-link amazon-list"><strong>New Releases in Amazon.</strong></a>
                                             </div>
                                             <hr/>
-                                            <div>
+                                            <div class="product">
                                                 <a href="https://amzn.to/4aj21Ap" target="_blank" class="btn btn-link amazon-list"><strong>Move and Shakers in Amazon.</strong></a>
                                             </div>
                                             <hr/>
-                                            <div>
+                                            <div class="product">
                                                 <a href="https://amzn.to/4qY1rPM" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers Computers and Accesories in Amazon.</strong></a>
                                             </div>
                                             <hr/>
-                                            <div>
+                                            <div class="product">
                                                 <a href="https://amzn.to/4aAApIq" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers Electronics in Amazon.</strong></a>
                                             </div>
                                             <hr/>
-                                            <div>
+                                            <div class="product">
                                                 <a href="https://amzn.to/4ko9Pp6" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers Cell Phones and Accesories in Amazon.</strong></a>
                                             </div>
                                             <hr/>
