--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -625,6 +625,7 @@
                                 
                                 $('input[name="show-section"][value="show-all"]').prop('checked', true);
                                 $(".search-collectibles").val("");
+                                search_collectibles_value_ext = "";
                                 $(".search-collectibles").trigger(e_keyup);
                             });
                         </script>
