--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -537,16 +537,12 @@
                         <script>
                             $( document ).ready(function() {
                                 
-                                var search_collectibles_value_ext = $( ".search-collectibles" ).val();
-                                
                                 var e_keyup = jQuery.Event("keyup");
                                 e_keyup.which = 13; // 13 is the key code for 'Enter'
                                 e_keyup.keyCode = 13; // Setting both for cross-browser safety
                             
                                 $( ".search-collectibles" ).keyup(function() {
                                     var search_collectibles_val = $( ".search-collectibles" ).val().trim();
-                                    
-                                    search_collectibles_value_ext = $( ".search-collectibles" ).val();
 
                                     if(search_collectibles_val == "")
                                     {
@@ -554,20 +550,25 @@
                                     }
                                     else
                                     {
-                                        $(".product").hide();
-                                        $(".product").each(function() {
-                                            // 'this' refers to the current DOM element in the loop
-                                            // You can wrap 'this' in $() to use jQuery methods on it
+                                        if($('input[name="show-section"]:checked').val() == "show-spring-clothing")
+                                            $(".product").show();
+                                        else
+                                        {
+                                            $(".product").hide();
+                                            $(".product").each(function() {
+                                                // 'this' refers to the current DOM element in the loop
+                                                // You can wrap 'this' in $() to use jQuery methods on it
 
-                                            if($(this).text().trim().toLowerCase().includes(search_collectibles_val.toLowerCase()))
-                                            {
-                                                $(this).show(); // Example: hide each element
-                                            }else
-                                            {
-                                                $(this).hide();
-                                            }
-                                            //console.log($(this).text()); // Example: log the text content of each element
-                                        });
+                                                if($(this).text().trim().toLowerCase().includes(search_collectibles_val.toLowerCase()))
+                                                {
+                                                    $(this).show(); // Example: hide each element
+                                                }else
+                                                {
+                                                    $(this).hide();
+                                                }
+                                                //console.log($(this).text()); // Example: log the text content of each element
+                                            });
+                                        }
                                     }
                                 });
                                 
@@ -581,7 +582,6 @@
                                         $(".udemy-courses").show();
                                         $(".amazon-books").show();
                                         $(".search-section").show();
-                                        $( ".search-collectibles" ).val(search_collectibles_value_ext);
                                     }else if(selectedValue == "show-spring-clothing")
                                     {
                                         $(".spring-clothing").show();
@@ -589,9 +589,6 @@
                                         $(".udemy-courses").hide();
                                         $(".amazon-books").hide();
                                         $(".search-section").hide();
-                                        if($( ".search-collectibles" ).val() != "")
-                                            search_collectibles_value_ext = $( ".search-collectibles" ).val();
-                                        $( ".search-collectibles" ).val("");
                                     }else if(selectedValue == "show-amazon-best-deals")
                                     {
                                         $(".spring-clothing").hide();
@@ -599,7 +596,6 @@
                                         $(".udemy-courses").hide();
                                         $(".amazon-books").hide();
                                         $(".search-section").show();
-                                        $( ".search-collectibles" ).val(search_collectibles_value_ext);
                                     }else if(selectedValue == "show-udemy-courses")
                                     {
                                         $(".spring-clothing").hide();
@@ -607,7 +603,6 @@
                                         $(".udemy-courses").show();
                                         $(".amazon-books").hide();
                                         $(".search-section").show();
-                                        $( ".search-collectibles" ).val(search_collectibles_value_ext);
                                     }else if(selectedValue == "show-amazon-books")
                                     {
                                         $(".spring-clothing").hide();
@@ -615,7 +610,6 @@
                                         $(".udemy-courses").hide();
                                         $(".amazon-books").show();
                                         $(".search-section").show();
-                                        $( ".search-collectibles" ).val(search_collectibles_value_ext);
                                     }
 
                                     // Trigger the event on the desired element
@@ -624,7 +618,6 @@
                                 
                                 $('input[name="show-section"][value="show-all"]').prop('checked', true);
                                 $(".search-collectibles").val("");
-                                search_collectibles_value_ext = "";
                                 $(".search-collectibles").trigger(e_keyup);
                             });
                         </script>
