--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -611,6 +611,8 @@
                                         $(".amazon-books").show();
                                         $(".search-section").show();
                                     }
+                                    
+                                    $(".search-collectibles").trigger(e_keyup);
                                 });
                                 
                                 $('input[name="show-section"][value="show-all"]').prop('checked', true);
