--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -670,7 +670,7 @@
                                 </h3>
                                 <div class="input-group input-group-lg search-section">
                                   <span class="input-group-text" id="inputGroup-sizing-lg" style="color: black !important"><i class="fa-solid fa-magnifying-glass"></i></span>
-                                  <input type="text" class="search-collectibles form-control" placeholder="Search [Products, Services]" aria-label="Search collectibles" aria-describedby="inputGroup-sizing-lg" />
+                                  <input type="text" class="search-collectibles form-control" placeholder="Search Products and Services" aria-label="Search collectibles" aria-describedby="inputGroup-sizing-lg" />
                                 </div>
                             </div>
                             <div t-if="with_links" class="spring-clothing">
