--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -628,7 +628,8 @@
                             <br/>
                             <h1>Welcome to Your LatinChain Club</h1>
                             <br/>
-                            <h3>You can find these, our most notable books by ASIN or ISBN, in bookstores as Amazon (globally), Iberlibro (Europe) or others around the world. There are also courses available. Shipping worldwide.</h3>
+                            <h3 t-if="not with_links">Udemy courses, Amazon Books. Shipping worldwide.</h3>
+                            <h3 t-elif="with_links">Clothing, Amazon best sellers and deals, Udemy courses, Amazon Books. Shipping worldwide.</h3>
                             <br/>
                             <div style="margin-bottom:10px;">
                                 <h3 style="text-align:left">
