--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1038,7 +1038,7 @@
                     <div id="modal_exchange_message_3" style="display:none;">x2 points was activated.</div>
                     <div id="modal_exchange_message_4" style="display:none;">Not exchanged. Not enough</div>
                     <div id="modal_exchange_message_5" style="display:none;">Are you sure you want to exchange the Latin points?. This action is irreversible.</div>
-                    <div id="rewarded_message_1" style="display:none;">Watch a video to claim your reward?.</div>
+                    <div id="rewarded_message_1" style="display:none;">▶️ Watch a video to claim your reward?.</div>
                     <div id="rewarded_message_2" style="display:none;">In order to maintain our servers, we ask you to watch a Rewarded Ad until the end, we will give you a reward at the end of the ad.</div>
                     
                     <!--<input type="hidden" id="a_ads_val_2" t-att-value="a_ads_2"/>
