--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -702,6 +702,10 @@
                                             </div>
                                             <div class="product">
                                                 <hr/>
+                                                <a href="https://amzn.to/3OkIGYi" target="_blank" class="btn btn-link amazon-list"><strong>Computers and Accessories Deals in Amazon.</strong></a>
+                                            </div>
+                                            <div class="product">
+                                                <hr/>
                                                 <a href="https://amzn.to/4bCo9Z0" target="_blank" class="btn btn-link amazon-list"><strong>Electronic Deals in Amazon.</strong></a>
                                             </div>
                                             <div class="product">
