--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -944,7 +944,7 @@
                     
                     <!--<script src="/website_pinetwork_odoo/static/src/js/common_functions.js?v=1.107"></script>-->
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.773"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.774"></script>
                     
                     <!--<script t-if="mainnet in ['Testnet ON', 'Testnet OFF'] and nopopup" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
                     -->
@@ -1247,6 +1247,7 @@
                                 <button id="logout_latinchain" class="btn btn-outline-danger font-weight-bold text-white border-white loggedin" style="display: none; border: 2px solid; max-width: 100px; font-size: 100% !important"><div>Logout</div></button>
                                 <button id="login_latinchain" class="btn btn-outline-success font-weight-bold text-white border-white loggedout" style="display: none; border: 2px solid; max-width: 100px; font-size: 100% !important"><div>Login</div></button>
                                 <button class="btn btn-outline-info font-weight-bold text-white border-white clear_cache" style="border-radius: 50%; border: 2px solid; font-size: 100% !important"><div style=""><i class="fa fa-refresh"></i></div></button>
+                                <button class="btn btn-outline-info font-weight-bold text-white border-white button-share" style="border-radius: 50%; border: 2px solid; font-size: 100% !important"><div style=""><i class="fa fa-share-alt"></i></div></button>
                             </div>
                         </div>
                         <div class="row getverified" style="">
@@ -2831,7 +2832,7 @@
                         
                         <br/><br/>
                         <div id="social_div">Share in Social Networks:<br/><br/>
-                            <button id="button1" class="btn btn-outline-primary" style="border-radius: 50%; border: 2px solid;"><i class="fa fa-share-alt"></i></button><br/><br/>
+                            <button class="btn btn-outline-primary button-share" style="border-radius: 50%; border: 2px solid;"><i class="fa fa-share-alt"></i></button><br/><br/>
                             
                             <div class="container" style="text-align:center">
                                 <div class="row">
