--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1243,7 +1243,7 @@
                                 <div class="isverified" style="display: none;">Verified <i class="fa fa-check-circle-o"></i>.</div>
                                 <div class="isverified-username font-weight-bold" style="display: none;"></div>
                             </div>
-                            <div style="text-align:right; padding-left: 0px" class="col-6">
+                            <div style="text-align:right; padding-left: 0px; font-size: 80%" class="col-6">
                                 <button id="logout_latinchain" class="btn btn-outline-danger font-weight-bold text-white border-white loggedin" style="display: none; border: 2px solid; max-width: 100px; font-size: 100% !important"><div><i class="fa-solid fa-right-from-bracket"></i></div></button>
                                 <button id="login_latinchain" class="btn btn-outline-success font-weight-bold text-white border-white loggedout" style="display: none; border: 2px solid; max-width: 100px; font-size: 100% !important"><div><i class="fa-solid fa-right-to-bracket"></i></div></button>
                                 <button class="btn btn-outline-info font-weight-bold text-white border-white clear_cache" style="border-radius: 50%; border: 2px solid; font-size: 100% !important"><div style=""><i class="fa fa-refresh"></i></div></button>
