--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -714,6 +714,38 @@
                                             </div>
                                             <div class="product">
                                                 <hr/>
+                                                <a href="https://amzn.to/4rJDqfe" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Deals in Amazon.</strong></a>
+                                            </div>
+                                            <div class="product">
+                                                <hr/>
+                                                <a href="https://amzn.to/4s5xSw3" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Nike in Amazon.</strong></a>
+                                            </div>
+                                            <div class="product">
+                                                <hr/>
+                                                <a href="https://amzn.to/3OB0EG4" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Adidas in Amazon.</strong></a>
+                                            </div>
+                                            <div class="product">
+                                                <hr/>
+                                                <a href="https://amzn.to/4tLrFqG" target="_blank" class="btn btn-link amazon-list"><strong>Shoes PUMA in Amazon.</strong></a>
+                                            </div>
+                                            <div class="product">
+                                                <hr/>
+                                                <a href="https://amzn.to/4rPHElQ" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Under Armor in Amazon.</strong></a>
+                                            </div>
+                                            <div class="product">
+                                                <hr/>
+                                                <a href="https://amzn.to/4qAzsVs" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Reebok in Amazon.</strong></a>
+                                            </div>
+                                            <div class="product">
+                                                <hr/>
+                                                <a href="https://amzn.to/4ax6csH" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Skechers in Amazon.</strong></a>
+                                            </div>
+                                            <div class="product">
+                                                <hr/>
+                                                <a href="https://amzn.to/3Ol5cAi" target="_blank" class="btn btn-link amazon-list"><strong>Shoes New Balance in Amazon.</strong></a>
+                                            </div>
+                                            <div class="product">
+                                                <hr/>
                                                 <a href="https://amzn.to/4alHefE" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers in Amazon.</strong></a>
                                             </div>
                                             <div class="product">
