--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -698,75 +698,75 @@
                                         <h3 class="col-12">
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4qpX7aS" target="_blank" class="btn btn-link amazon-list"><strong>Deals in Amazon.</strong></a>
+                                                <a href="https://amzn.to/4qpX7aS" target="_blank" class="btn btn-link amazon-list"><strong>Deals in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/3OkIGYi" target="_blank" class="btn btn-link amazon-list"><strong>Computers and Accessories Deals in Amazon.</strong></a>
+                                                <a href="https://amzn.to/3OkIGYi" target="_blank" class="btn btn-link amazon-list"><strong>Computers and Accessories Deals in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4bCo9Z0" target="_blank" class="btn btn-link amazon-list"><strong>Electronic Deals in Amazon.</strong></a>
+                                                <a href="https://amzn.to/4bCo9Z0" target="_blank" class="btn btn-link amazon-list"><strong>Electronic Deals in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4akiO66" target="_blank" class="btn btn-link amazon-list"><strong>Cellphones and Accessories Deals in Amazon.</strong></a>
+                                                <a href="https://amzn.to/4akiO66" target="_blank" class="btn btn-link amazon-list"><strong>Cellphones and Accessories Deals in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4rJDqfe" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Deals in Amazon.</strong></a>
+                                                <a href="https://amzn.to/4rJDqfe" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Deals in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4s5xSw3" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Nike in Amazon.</strong></a>
+                                                <a href="https://amzn.to/4s5xSw3" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Nike in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/3OB0EG4" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Adidas in Amazon.</strong></a>
+                                                <a href="https://amzn.to/3OB0EG4" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Adidas in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4tLrFqG" target="_blank" class="btn btn-link amazon-list"><strong>Shoes PUMA in Amazon.</strong></a>
+                                                <a href="https://amzn.to/4tLrFqG" target="_blank" class="btn btn-link amazon-list"><strong>Shoes PUMA in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4rPHElQ" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Under Armor in Amazon.</strong></a>
+                                                <a href="https://amzn.to/4rPHElQ" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Under Armor in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4qAzsVs" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Reebok in Amazon.</strong></a>
+                                                <a href="https://amzn.to/4qAzsVs" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Reebok in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4ax6csH" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Skechers in Amazon.</strong></a>
+                                                <a href="https://amzn.to/4ax6csH" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Skechers in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/3Ol5cAi" target="_blank" class="btn btn-link amazon-list"><strong>Shoes New Balance in Amazon.</strong></a>
+                                                <a href="https://amzn.to/3Ol5cAi" target="_blank" class="btn btn-link amazon-list"><strong>Shoes New Balance in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4alHefE" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers in Amazon.</strong></a>
+                                                <a href="https://amzn.to/4alHefE" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4tk3Shj" target="_blank" class="btn btn-link amazon-list"><strong>New Releases in Amazon.</strong></a>
+                                                <a href="https://amzn.to/4tk3Shj" target="_blank" class="btn btn-link amazon-list"><strong>New Releases in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4aj21Ap" target="_blank" class="btn btn-link amazon-list"><strong>Move and Shakers in Amazon.</strong></a>
+                                                <a href="https://amzn.to/4aj21Ap" target="_blank" class="btn btn-link amazon-list"><strong>Move and Shakers in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4qY1rPM" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers Computers and Accessories in Amazon.</strong></a>
+                                                <a href="https://amzn.to/4qY1rPM" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers Computers and Accessories in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4aAApIq" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers Electronics in Amazon.</strong></a>
+                                                <a href="https://amzn.to/4aAApIq" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers Electronics in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4ko9Pp6" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers Cellphones and Accessories in Amazon.</strong></a>
+                                                <a href="https://amzn.to/4ko9Pp6" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers Cellphones and Accessories in Amazon</strong></a>
                                                 <hr/>
                                             </div>
                                         </h3>
