--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -731,7 +731,7 @@
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4rPHElQ" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Under Armor in Amazon</strong></a>
+                                                <a href="https://amzn.to/4rPHElQ" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Under Armour in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
