--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1418,10 +1418,10 @@
                                     Max rewarded ads:
                                     <br/>
                                     (<span id="pi_ad_counter">0</span>/<t t-esc="pi_ad_max" /> Pi Ads | <t t-esc="pi_ad_hours" />h)
-                                    <br/>
+                                    <!--<br/>
                                     Max interstitial ads:
                                     <br/>
-                                    (1 Pi Ads | 10 minutes)
+                                    (1 Pi Ads | 10 minutes)-->
                                 </div>
                             </div>
                             
