--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -699,6 +699,14 @@
                                         <h3 class="col-12">
                                             <div class="product">
                                                 <hr/>
+                                                <a href="https://amzn.to/4afSc7M" target="_blank" class="btn btn-link amazon-list"><strong>FIFA World Cup 2026 in Amazon</strong></a>
+                                            </div>
+                                            <div class="product">
+                                                <hr/>
+                                                <a href="https://amzn.to/4tC5XoG" target="_blank" class="btn btn-link amazon-list"><strong>FIFA World Cup 2026 Soccer Ball in Amazon</strong></a>
+                                            </div>
+                                            <div class="product">
+                                                <hr/>
                                                 <a href="https://amzn.to/4qtGwTz" target="_blank" class="btn btn-link amazon-list"><strong>Deals in Amazon</strong></a>
                                             </div>
                                             <div class="product">
